--- a/resources/assets/sass/bulma/_sidebar.scss
+++ b/resources/assets/sass/bulma/_sidebar.scss
@@ -1,4 +1,4 @@
-#admin-side-menu {
+#left-side-menu {
 	position: fixed;
 	top: 3.3rem;
 	left: -200px;
@@ -9,7 +9,10 @@
 	transition: left 0.3s ease-in-out;
 	&.is-active {
 		transition: left 0.3s ease-in-out;
-		left: 0;	
+		left: 0;
+		@include touch {
+			z-index: 1;
+		}
 	}
 	@include desktop {
 		left: 0;
@@ -18,7 +21,31 @@
 		color: $brand-success;
 	}
 }
-#admin-slideout-button {
+
+#right-side-menu {
+	position: fixed;
+	top: 3.3rem;
+	right: -200px;
+	bottom: 0;
+	width: 200px;
+	background-color: whitesmoke;
+	overflow-y: scroll;
+	transition: right 0.3s ease-in-out;
+	&.is-active {
+		transition: right 0.3s ease-in-out;
+		right: 0;
+		@include touch {
+			z-index: 1;
+		}
+	}
+	@include desktop {
+		display: none;
+	}
+	.side-menu li a:hover {
+		color: $brand-success;
+	}
+}
+#left-slideout-button {
 	transition: 0.3s;
 	&.is-active {
 		transition: 0.3s;
@@ -28,8 +55,11 @@
 .managment-area{
 	position: absolute;
 	top: 4rem;
-	left: 200px;
 	right: 0;
+	left: 200px;
+	@include touch {
+		left: 0;
+	}
 }
 
 .flex-container{
