Update Helpers && Update ELearning Template: Dashboard Courses CRUD

--- a/resources/assets/sass/bulma/app.scss
+++ b/resources/assets/sass/bulma/app.scss
@@ -1,8 +1,10 @@
 // Fonts
 // @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
-// Font Awesome
+// Font Icons
 @import "node_modules/font-awesome/scss/font-awesome";
+@import "node_modules/mdi/scss/materialdesignicons";
+// @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 // Bulma
 @import "node_modules/bulma/bulma";
