--- a/resources/assets/sass/templates/portfolios/template1/app.scss
+++ b/resources/assets/sass/templates/portfolios/template1/app.scss
@@ -1,7 +1,6 @@
 @import "node_modules/materialize-css/sass/materialize";
 @import "node_modules/font-awesome/scss/font-awesome";
-
-
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 body {
 	background: rgb(15, 15, 15);
